--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,9 +31,11 @@ dist.dir=dist
 dist.jar=${dist.dir}/JavaApplication11.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.jcalendar-1.4.jar=C:\\Users\\Lenovo\\Downloads\\Jcalendar-1.4\\lib\\jcalendar-1.4.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.jcalendar-1.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
